--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
                 <a href="{{ path('app_home') }}">Home</a>
                 <a href="">Produits</a>
             {% if app.user %}
-                {# <a href="{{ path('app_user_show', {'id': app.user.id}) }}">Profil</a> #}
+                <a href="{{ path('app_user_show', {'id': app.user.id}) }}">Profil</a>
                 <a href="{{ path('app_logout') }}">Déconnexion</a>
             {% else %}
                 <a href="{{ path('app_login') }}">Se Connecter</a>
