--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,7 +10,7 @@
         {{ form_row(registrationForm.name) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword) }}
-        {# {{ form_row(registrationForm.roles) }} #}
+        {{ form_row(registrationForm.roles) }}
 
         <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
