--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -25,7 +25,7 @@
         {{ form_row(form.name) }}
         {{ form_row(form.email) }}        
         <button class="btn action_button">{{ button_label|default('Save') }}</button>
-    {{ form_end(form, {'render_rest': false}) }}
+    {{ form_end(form) }}
 
     
     <div class="content_container">
