--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,6 +8,9 @@
 		<a class="action_button" href="{{ path('app_article_new') }}">Créer un nouvel article</a>
 	{% endif %}
 
+	{# {{ dump(app.user) }}; #}
+	
+
 	{% for article in articles %}
 		<section>
 			<h2>{{ article.title }}</h2>
