--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -8,6 +8,7 @@
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.firstname) }}
         {{ form_row(registrationForm.name) }}
+        {{ form_row(registrationForm.sexe) }}
         {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword) }}
         {{ form_row(registrationForm.roles) }}
