--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -8,8 +8,8 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ product.id }}</td>
+                <th>Image</th>
+                <td>{{ product.image }}</td>
             </tr>
             <tr>
                 <th>Title</th>
@@ -34,14 +34,6 @@
             <tr>
                 <th>Image</th>
                 <td>{{ product.image }}</td>
-            </tr>
-            <tr>
-                <th>Flocking</th>
-                <td>{{ product.flocking }}</td>
-            </tr>
-            <tr>
-                <th>Quantity</th>
-                <td>{{ product.quantity }}</td>
             </tr>
             <tr>
                 <th>Is_published</th>
