--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
         <header>
             <nav>
                 <a href="{{ path('app_home') }}">Home</a>
-                <a href="">Produits</a>
+                <a href="{{ path('app_product_index')}}">Produits</a>
             {% if app.user %}
                 <a href="{{ path('app_user_show', {'id': app.user.id}) }}">Profil</a>
                 <a href="{{ path('app_logout') }}">Déconnexion</a>
