--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -8,8 +8,7 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>Image</th>
-                <td>{{ product.image }}</td>
+                <td colspan="2"><img src="{{ product.image }}" height="100px" weight="auto"></td>
             </tr>
             <tr>
                 <th>Title</th>
@@ -31,20 +30,12 @@
                 <th>Edited_at</th>
                 <td>{{ product.editedAt ? product.editedAt|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
-            <tr>
-                <th>Image</th>
-                <td>{{ product.image }}</td>
-            </tr>
-            <tr>
-                <th>Is_published</th>
-                <td>{{ product.isPublished ? 'Yes' : 'No' }}</td>
-            </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('app_product_index') }}">back to list</a>
+    <a class="action_button" href="{{ path('app_product_index') }}">back to list</a>
 
-    <a href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a>
+    {# <a href="{{ path('app_product_edit', {'id': product.id}) }}">edit</a> #}
 
-    {{ include('product/_delete_form.html.twig') }}
+    {# {{ include('product/_delete_form.html.twig') }} #}
 {% endblock %}
